welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: ')' expected but ';' found.
if (estSurBiscuit();) {
                   ^BaggleSeeker:1: error: illegal start of statement
if (estSurBiscuit();) {
                    ^BaggleSeeker:6: error: illegal start of statement
if (estSurBiscuit();) {
                    ^